# tts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  DEPRECATIONS.md  FIXME.md  Makefile  PROPOSAL_CLI.md  README.md  TEXT_CLI_backup.md  TODO.md  TTS_CLI_TEST_REPORT.md  blah.sh  chatterbox_daemon.py  chatterbox_server.py  chatterbox_server_daemon.py  config.toml  docker-compose.yml  generated_tts_cli.py  generated_tts_cli_complete.py  generated_tts_cli_corrected.py  goobits.yaml  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  run_tests.sh  setup-config.yaml  setup-legacy.sh  setup.py  setup.sh  speak.py  test.sh  test_cli.py  test_simple.py  tts  tts_help.txt  vm.json  (+1 more)
.cache/documents/: cache_metadata.json  json_5f9de8f9fed9a855.pkl  markdown_1013af9424c4f758.pkl  markdown_40fc882fadaada36.pkl  markdown_524772545bbdc96f.pkl  markdown_5912a16b7654bd32.pkl  markdown_9a5736fd6959125e.pkl  markdown_9fbc4cc21e458a19.pkl  markdown_a84c50e6256f69f4.pkl  markdown_aebcdde088d4e8ca.pkl  markdown_b95b1e35ff857782.pkl  markdown_bdf1c166bc83c43d.pkl  markdown_ec7f4feddd1c1349.pkl  markdown_f2ca1bb6c7e907d0.pkl
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
.temp/: .coverage  README.md
.temp/pytest/v/cache/: lastfailed  nodeids
docs/: TODO.md  advanced.md  getting-started.md  providers.md  user-guide.md
docs/testing/: cli-test-checklist.md
goobits_matilda_voice/: cli.py  cli_hooks.py
issue-test/: vm.yaml
scripts/: chatterbox_daemon.py  cli_validation.py  monitor_performance.sh  test.py  test.sh
src/goobits_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/matilda_voice/: __version__.py  app_hooks.py  audio_utils.py  base.py  cli.py  config.py  core.py  exceptions.py  http_retry.py  security.py  server.py  setup.sh  token_storage.py  types.py  voice_browser.py  voice_manager.py
src/matilda_voice/document_processing/: base_parser.py  markdown_parser.py  mixed_content_processor.py  parser_factory.py  performance_cache.py  universal_converter.py
src/matilda_voice/hooks/: __init__.py  core.py  document.py  providers.py  system.py  utils.py  voice.py
src/matilda_voice/i18n/: __init__.py
src/matilda_voice/internal/: audio_utils.py  http_retry.py  types.py
src/matilda_voice/providers/: chatterbox.py  coqui.py  edge_tts.py  elevenlabs.py  google_tts.py  openai_tts.py
src/matilda_voice/speech_synthesis/: advanced_emotion_detector.py  emotion_detector.py  semantic_formatter.py  speech_markdown.py  ssml_generator.py  tts_engine.py
src/matilda_voice/voice_browser/: __init__.py  browser_commands.py  browser_ui.py  voice_analyzer.py
src/tts/: __version__.py  app_hooks.py  audio_utils.py  base.py  cli.py  config.py  core.py  exceptions.py  http_retry.py  setup.sh  types.py  voice_browser.py  voice_manager.py
src/tts/document_processing/: base_parser.py  markdown_parser.py  mixed_content_processor.py  performance_cache.py  universal_converter.py
src/tts/hooks/: __init__.py  core.py  document.py  providers.py  system.py  utils.py  voice.py
src/tts/providers/: chatterbox.py  edge_tts.py  elevenlabs.py  google_tts.py  openai_tts.py
src/tts/speech_synthesis/: advanced_emotion_detector.py  emotion_detector.py  semantic_formatter.py  speech_markdown.py  ssml_generator.py  tts_engine.py
tests/: .zcompdump  README.md  __init__.py  cli-test-checklist.md  conftest.py  test_audio_utils.py  test_base.py  test_cli.py  test_cli_document.py  test_cli_formats.py  test_cli_quick.py  test_cli_real_integration.py  test_cli_smoke.py  test_config.py  test_document_processing.py  test_edge_tts.py  test_exceptions.py  test_input_parsing.py  test_tts_engine.py  test_voice_analysis.py
tests/__fixtures__/: README.md  data_export.json  technical_document.md  tutorial_guide.md
tests/e2e/: README.md  test_cli_real_integration.py  test_cli_smoke.py  test_complete_workflows.py  test_pipeline_integration.py
tests/fixtures/: README.md  marketing_page.html  story_narrative.md
tests/integration/: README.md  __init__.py  test_audio_validation.py  test_cli.py  test_cli_config.py  test_cli_integration.py  test_real_audio_synthesis.py
tests/integration/providers/: __init__.py  base_provider_test.py  test_chatterbox_integration.py  test_elevenlabs_integration.py  test_google_integration.py  test_openai_integration.py
tests/mocking/: README.md  __init__.py  audio_mocks.py  network_mocks.py  provider_mocks.py
tests/providers/: __init__.py  test_edge_tts.py
tests/unit/: test_audio_utils.py  test_cli_formats.py  test_config.py  test_exceptions.py  test_utils_validation.py  test_voice_analysis.py
tests/utils/: __init__.py  test_helpers.py
tts-integration/: PIVOT_PLAN.md  PROPOSAL.md  PROPOSAL_MIGRATION.md  README.md  main_with_tts.py
tts-integration/document_parsing/: base_parser.py  markdown_parser.py  parser_factory.py  performance_cache.py
tts-integration/integration/: __init__.py  mixed_content_processor.py
tts-integration/speech_synthesis/: __init__.py  advanced_emotion_detector.py  emotion_detector.py  semantic_formatter.py  speech_markdown.py  ssml_generator.py  tts_engine.py
tts_cli/: audio_utils.py  base.py  config.py  core.py  exceptions.py  generated_cli.py  tts.py  types.py  voice_browser.py  voice_manager.py
tts_cli/document_processing/: __init__.py  base_parser.py  mixed_content_processor.py  parser_factory.py  performance_cache.py  universal_converter.py
tts_cli/providers/: chatterbox.py  edge_tts.py  elevenlabs.py  google_tts.py  maskgct.py  naturalspeech.py  openai_tts.py  orpheus.py
tts_cli/speech_synthesis/: __init__.py  advanced_emotion_detector.py  emotion_detector.py  semantic_formatter.py  speech_markdown.py  ssml_generator.py  tts_engine.py
tts_cli/utils/: __init__.py  audio.py
ttt/shared-setup/: setup.sh
